// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformApiToInternalGrade transforms with grading periods 1`] = `
{
  "courseId": "42",
  "grade": "D",
  "hasGradingPeriods": true,
  "restrictQuantitativeData": undefined,
  "score": 42.34,
  "scoreThasWasCoercedToLetterGrade": undefined,
}
`;

exports[`transformApiToInternalGrade transforms without grading periods 1`] = `
{
  "courseId": "42",
  "grade": "F",
  "hasGradingPeriods": false,
  "restrictQuantitativeData": undefined,
  "score": 34.42,
  "scoreThasWasCoercedToLetterGrade": undefined,
}
`;

exports[`transformApiToInternalItem copes with a non-existent (e.g. concluded) course 1`] = `
{
  "address": null,
  "completed": false,
  "context": undefined,
  "course_id": 999,
  "date": "2018-03-27T18:58:51.000Z",
  "dateBucketMoment": "2018-03-27T00:00:00.000Z",
  "dateStyle": "todo",
  "details": "Some To Do Note Details :)",
  "feedback": undefined,
  "html_url": undefined,
  "id": 10,
  "location": null,
  "newActivity": false,
  "originallyCompleted": false,
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "Some To Do Note",
  "toggleAPIPending": false,
  "type": "To Do",
  "uniqueId": "planner_note-10",
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a calendar event response 1`] = `
{
  "address": "Here",
  "allDay": false,
  "completed": false,
  "context": {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2018-03-27T18:58:51.000Z",
  "dateBucketMoment": "2018-03-27T00:00:00.000Z",
  "dateStyle": "due",
  "details": "calendar event description",
  "feedback": undefined,
  "html_url": "/calendar?event_id=1&include_contexts=course_1",
  "id": 1,
  "location": "Home",
  "newActivity": false,
  "onlineMeetingURL": undefined,
  "originallyCompleted": false,
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "calendar_event title",
  "toggleAPIPending": false,
  "type": "Calendar Event",
  "uniqueId": "calendar_event-1",
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a calendar event response with an all day date 1`] = `
{
  "address": "Here",
  "allDay": true,
  "completed": false,
  "context": {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2018-03-27T18:58:51.000Z",
  "dateBucketMoment": "2018-03-27T00:00:00.000Z",
  "dateStyle": "due",
  "details": "calendar event description",
  "feedback": undefined,
  "html_url": "/calendar?event_id=1&include_contexts=course_1",
  "id": 1,
  "location": "Home",
  "newActivity": false,
  "onlineMeetingURL": undefined,
  "originallyCompleted": false,
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "calendar_event title",
  "toggleAPIPending": false,
  "type": "Calendar Event",
  "uniqueId": "calendar_event-1",
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a discussion response 1`] = `
{
  "address": null,
  "completed": false,
  "context": {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2018-03-27T18:58:51.000Z",
  "dateBucketMoment": "2018-03-27T00:00:00.000Z",
  "dateStyle": "todo",
  "feedback": undefined,
  "html_url": "/courses/1/discussion_topics/10",
  "id": "1",
  "location": null,
  "newActivity": false,
  "originallyCompleted": false,
  "overrideAssignId": 9,
  "overrideId": null,
  "points": 40,
  "status": false,
  "title": "How to make enemies",
  "toggleAPIPending": false,
  "type": "Discussion",
  "uniqueId": "discussion_topic-1",
  "unread_count": 0,
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a graded discussion response 1`] = `
{
  "address": null,
  "completed": false,
  "context": {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2018-03-27T18:58:51.000Z",
  "dateBucketMoment": "2018-03-27T00:00:00.000Z",
  "dateStyle": "due",
  "feedback": undefined,
  "html_url": "/courses/1/discussion_topics/10",
  "id": "1",
  "location": null,
  "newActivity": false,
  "originallyCompleted": false,
  "overrideAssignId": 10,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "How to make friends part 2",
  "toggleAPIPending": false,
  "type": "Discussion",
  "uniqueId": "discussion_topic-1",
  "unread_count": 0,
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a graded discussion response with an unread count 1`] = `
{
  "address": null,
  "completed": true,
  "context": {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2018-03-27T18:58:51.000Z",
  "dateBucketMoment": "2018-03-27T00:00:00.000Z",
  "dateStyle": "due",
  "feedback": undefined,
  "html_url": "/courses/1/discussion_topics/10",
  "id": "1",
  "location": null,
  "newActivity": false,
  "originallyCompleted": true,
  "overrideAssignId": 9,
  "overrideId": null,
  "points": 40,
  "status": {
    "submitted": true,
    "unread_count": 10,
  },
  "title": "How to make enemies",
  "toggleAPIPending": false,
  "type": "Discussion",
  "uniqueId": "discussion_topic-1",
  "unread_count": 10,
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a planner_note response 1`] = `
{
  "address": null,
  "completed": false,
  "context": {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2018-03-27T18:58:51.000Z",
  "dateBucketMoment": "2018-03-27T00:00:00.000Z",
  "dateStyle": "todo",
  "details": "Some To Do Note Details :)",
  "feedback": undefined,
  "html_url": undefined,
  "id": 10,
  "location": null,
  "newActivity": false,
  "originallyCompleted": false,
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "Some To Do Note",
  "toggleAPIPending": false,
  "type": "To Do",
  "uniqueId": "planner_note-10",
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a planner_note response without an associated course 1`] = `
{
  "address": null,
  "completed": false,
  "course_id": undefined,
  "date": "2018-03-27T18:58:51.000Z",
  "dateBucketMoment": "2018-03-27T00:00:00.000Z",
  "dateStyle": "todo",
  "details": "Some To Do Note Details :)",
  "feedback": undefined,
  "html_url": undefined,
  "id": 10,
  "location": null,
  "newActivity": false,
  "originallyCompleted": false,
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "Some To Do Note",
  "toggleAPIPending": false,
  "type": "To Do",
  "uniqueId": "planner_note-10",
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for a quiz response 1`] = `
{
  "address": null,
  "completed": false,
  "context": {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2018-03-27T18:58:51.000Z",
  "dateBucketMoment": "2018-03-27T00:00:00.000Z",
  "dateStyle": "due",
  "feedback": undefined,
  "html_url": "/courses/1/assignments/10",
  "id": "10",
  "location": null,
  "newActivity": false,
  "originallyCompleted": false,
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": 100,
  "status": false,
  "title": "How to make friends",
  "toggleAPIPending": false,
  "type": "Quiz",
  "uniqueId": "quiz-10",
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for an assignment response 1`] = `
{
  "address": null,
  "completed": false,
  "context": {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2018-03-27T18:58:51.000Z",
  "dateBucketMoment": "2018-03-27T00:00:00.000Z",
  "dateStyle": "due",
  "feedback": undefined,
  "html_url": "/courses/1/assignments/10",
  "id": "10",
  "location": null,
  "newActivity": false,
  "originallyCompleted": false,
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": 50,
  "status": false,
  "title": "How to be neutral",
  "toggleAPIPending": false,
  "type": "Assignment",
  "uniqueId": "assignment-10",
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper data for an ungraded discussion reponse with an unread count 1`] = `
{
  "address": null,
  "completed": false,
  "context": {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2018-03-27T18:58:51.000Z",
  "dateBucketMoment": "2018-03-27T00:00:00.000Z",
  "dateStyle": "todo",
  "feedback": undefined,
  "html_url": "/courses/1/discussion_topics/10",
  "id": "1",
  "location": null,
  "newActivity": false,
  "originallyCompleted": false,
  "overrideAssignId": 9,
  "overrideId": null,
  "points": undefined,
  "status": {
    "unread_count": 10,
  },
  "title": "How to make enemies",
  "toggleAPIPending": false,
  "type": "Discussion",
  "uniqueId": "discussion_topic-1",
  "unread_count": 10,
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper date for a peer review 1`] = `
{
  "address": null,
  "completed": false,
  "context": {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2018-03-27T18:58:51.000Z",
  "dateBucketMoment": "2018-03-27T00:00:00.000Z",
  "dateStyle": "due",
  "feedback": undefined,
  "html_url": undefined,
  "id": "1",
  "location": null,
  "newActivity": false,
  "originallyCompleted": false,
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "review me",
  "toggleAPIPending": false,
  "type": "Peer Review",
  "uniqueId": "assessment_request-1",
}
`;

exports[`transformApiToInternalItem extracts and transforms the proper date for an account calendar event 1`] = `
{
  "address": "Here",
  "allDay": false,
  "completed": false,
  "context": {
    "color": undefined,
    "id": "1",
    "image_url": undefined,
    "title": "Main account",
    "type": "Account",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2018-03-27T18:58:51.000Z",
  "dateBucketMoment": "2018-03-27T00:00:00.000Z",
  "dateStyle": "due",
  "details": "calendar event description",
  "feedback": undefined,
  "html_url": "/calendar?event_id=1&include_contexts=account_1",
  "id": 1,
  "location": "Home",
  "newActivity": false,
  "onlineMeetingURL": undefined,
  "originallyCompleted": false,
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "calendar_event title",
  "toggleAPIPending": false,
  "type": "Calendar Event",
  "uniqueId": "calendar_event-1",
}
`;

exports[`transformApiToInternalItem handles account-level group items 1`] = `
{
  "address": null,
  "completed": false,
  "context": {
    "color": "#ffeeee",
    "id": "9",
    "image_url": undefined,
    "title": "group9",
    "type": "Group",
    "url": "/groups/9",
  },
  "course_id": "1",
  "date": "2018-01-12T05:00:00.000Z",
  "dateBucketMoment": "2018-01-12T00:00:00.000Z",
  "dateStyle": "todo",
  "feedback": undefined,
  "html_url": "/groups/9/pages/25",
  "id": "25",
  "location": null,
  "newActivity": false,
  "originallyCompleted": false,
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "wiki_page title",
  "toggleAPIPending": false,
  "type": "Page",
  "uniqueId": "wiki_page-25",
}
`;

exports[`transformApiToInternalItem includes location and endTime if given 1`] = `
{
  "address": "Here",
  "allDay": false,
  "completed": false,
  "context": {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2018-01-12T05:00:00.000Z",
  "dateBucketMoment": "2018-01-12T00:00:00.000Z",
  "dateStyle": "due",
  "details": "calendar event description",
  "endTime": "2018-01-12T07:00:00.000Z",
  "feedback": undefined,
  "html_url": "/calendar?event_id=1&include_contexts=course_1",
  "id": 1,
  "location": "A galaxy far far away",
  "newActivity": false,
  "onlineMeetingURL": undefined,
  "originallyCompleted": false,
  "overrideAssignId": undefined,
  "overrideId": null,
  "points": undefined,
  "status": false,
  "title": "calendar_event title",
  "toggleAPIPending": false,
  "type": "Calendar Event",
  "uniqueId": "calendar_event-1",
}
`;

exports[`transformPlannerNoteApiToInternalItem transforms the planner note response to an internal item when the planner note has an associated course 1`] = `
{
  "completed": false,
  "context": {
    "color": "#abffaa",
    "id": "1",
    "image_url": "blah_url",
    "title": "blah",
    "type": "Course",
    "url": undefined,
  },
  "course_id": "1",
  "date": "2017-06-21T18:58:51.000Z",
  "dateBucketMoment": "2017-06-21T18:58:51.000Z",
  "details": "asdfasdfasdf",
  "id": 14,
  "status": false,
  "title": "abc123",
  "type": "To Do",
  "uniqueId": "planner_note-14",
}
`;

exports[`transformPlannerNoteApiToInternalItem transforms the planner note response to the internal item 1`] = `
{
  "completed": false,
  "context": {},
  "course_id": null,
  "date": "2017-06-21T18:58:51.000Z",
  "dateBucketMoment": "2017-06-21T18:58:51.000Z",
  "details": "asdfasdfasdf",
  "id": 14,
  "status": false,
  "title": "abc123",
  "type": "To Do",
  "uniqueId": "planner_note-14",
}
`;
